<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/TopFragment">

    <action
        android:id="@+id/action_to_PostFragment"
        app:destination="@id/PostFragment" />

    <fragment
        android:id="@+id/TopFragment"
        android:name="com.u1tramarinet.autoscrolltwitter.top.TopFragment"
        android:label="@string/top_fragment_label"
        tools:layout="@layout/fragment_top">

        <action
            android:id="@+id/action_TopFragment_to_TimelineFragment"
            app:destination="@id/TimelineFragment" />

        <action
            android:id="@+id/action_TopFragment_to_SearchFragment"
            app:destination="@+id/SearchFragment" />
    </fragment>

    <fragment
        android:id="@+id/SearchFragment"
        android:name="com.u1tramarinet.autoscrolltwitter.search.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">

        <argument
            android:name="@string/argument_show_fab"
            android:defaultValue="true" />

        <argument
            android:name="@string/argument_fab_action_id"
            android:defaultValue="@id/action_SearchFragment_to_TimelineFragment" />

        <action
            android:id="@+id/action_SearchFragment_to_TimelineFragment"
            app:destination="@+id/TimelineFragment" />

    </fragment>

    <fragment
        android:id="@+id/TimelineFragment"
        android:name="com.u1tramarinet.autoscrolltwitter.timeline.TimelineFragment"
        android:label="@string/timeline_fragment_label"
        tools:layout="@layout/fragment_timeline">

        <argument
            android:name="@string/argument_show_fab"
            android:defaultValue="true" />

        <argument
            android:name="@string/argument_fab_action_id"
            android:defaultValue="@id/action_Timeline_to_PostFragment" />

        <action
            android:id="@+id/action_TimelineFragment_to_TopFragment"
            app:destination="@id/TopFragment" />

        <action
            android:id="@+id/action_Timeline_to_PostFragment"
            app:destination="@id/PostFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.u1tramarinet.autoscrolltwitter.setting.SettingsFragment"
        android:label="@string/app_name" />

    <fragment
        android:id="@+id/PostFragment"
        android:name="com.u1tramarinet.autoscrolltwitter.post.PostFragment"
        android:label="@string/post_fragment_label"
        tools:layout="@layout/fragment_post"/>
</navigation>